--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 # these rules might exclude image files for figures etc.
 # *.ps
 # *.eps
-# *.pdf
+*.pdf
 
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
@@ -89,3 +89,5 @@ sympy-plots-for-*.tex/
 *.xdy
 
 *.synctex
+
+auto
